<resources>
    <string name="app_name" translatable="false">GPS Map Camera</string>
    <string name="language">Select Language</string>
    <string name="no_internet">No internet connection. Please try again later</string>
    <string name="all_permissions_req">All permissions are required to continue</string>
    <string name="save">Save</string>
    <string name="languagetest">Hello, have a nice day!</string>
    <string name="continue_btn">Continue</string>
    <string name="permission_desc">Allow camera, location and storage access to\ncapture photos with accurate GPS details</string>
    <string name="camera">Camera</string>
    <string name="camera_desc">Take pictures and add location stamp</string>
    <string name="location">Location</string>
    <string name="location_desc">To tag photos with location details</string>
    <string name="microphone">Microphone</string>
    <string name="microphone_desc">To record audio while capturing videos</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="intro_title_one">GeoTag Your Photos\n Automatically</string>
    <string name="intro_title_two">Customizable Photo Stamp\n Templates</string>
    <string name="intro_title_three">Personalize Your Location\n Template</string>
    <string name="intro_title_four">Flexible Map Type\n Options</string>
    <string name="intro_desc_one">Keep your travels, work logs, and\n memories accurately documented</string>
    <string name="intro_desc_two">Personalize your location, date, and\n time layout with flexible templates</string>
    <string name="intro_desc_three">Customize how address, coordinates\n and date/time on your photos</string>
    <string name="intro_desc_four">Pick from multiple map modes to\n personalize your image overlay</string>
    <string name="getstarted">Get Started</string>
    <string name="preview_scale">Preview Scale</string>
    <string name="exposure">Exposure</string>
    <string name="error_in_creating_file">Error in creating file!</string>
    <string name="preparing_video">Preparing video...</string>
    <string name="share_video">Share Video!</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_delete">Are you sure you want to delete it!</string>
    <string name="please_check_your_internet">Please check your internet</string>
    <string name="please_capture_image">Please capture image</string>
    <string name="please_wait_data_is_loading">Please wait data is loading</string>
    <string name="dialog_permission_denied_title">Permission Denied</string>
    <string name="dialog_permission_denied_message">Open Settings and grant location and camera permissions for better and faster response</string>
    <string name="please_allow_the_location_permissions">PLease allow the location Permissions</string>
    <string name="please_send_feedback_in_playstore">Please send feedback in playstore</string>
    <string name="please_enter_title">Please enter title</string>
    <string name="please_enter_description">Please enter your comment!</string>
    <string name="please_enter_feedback_type">Please enter feedback type</string>
    <string name="please_enter_address">Please enter address!</string>
    <string name="sending_feedback">Sending feedback ....</string>
    <string name="feedback_submitted">Feedback submitted successfully</string>
    <string name="location_saved">Location saved</string>
    <string name="dialog_enable_location_title">Enable Location</string>
    <string name="dialog_enable_location_message">Your Location settings are turned off.\nPlease enable Location in settings</string>
    <string name="lbl_default_address" translatable="false">207, embassy centre, Ground Floor, Greater mumbai, Maharashtra, pin-400021</string>
    <string name="lbl_default_date_time" translatable="false">14-03-2022 04:15 PM</string>
    <string name="lbl_default_latitude" translatable="false">18.92839</string>
    <string name="lbl_default_latitude_dms" translatable="false">42.204 N</string>
    <string name="lbl_default_longitude" translatable="false">72.82235</string>
    <string name="lbl_default_longitude_dms" translatable="false">20.46 E</string>
    <string name="label_time_gmt" translatable="false">GMT : </string>
    <string name="label_date" translatable="false">Date : </string>
    <string name="label_lat" translatable="false">Lat : </string>
    <string name="label_long" translatable="false">Long : </string>
    <string name="label_latitude" translatable="false">Latitude</string>
    <string name="label_longitude" translatable="false">Longitude</string>
    <string name="type" translatable="false">Type</string>
    <string name="degree" translatable="false">Degree</string>
    <string name="dms" translatable="false">DMS</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="preview">Preview</string>
    <string name="share">Share</string>
    <string name="error_deleting_photo">error while deleting file</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="collection">Collection</string>
    <string name="photos">Photos</string>
    <string name="photo">Photo</string>
    <string name="videos">Videos</string>
    <string name="video">Video</string>
    <string name="video_play_pause">Play or pause video</string>
    <string name="custom_location">Custom Location</string>
    <string name="saved_location">Saved Location</string>
    <string name="photos_not_found">Photos Not Found!</string>
    <string name="no_saved_location">No Saved Location</string>
    <string name="videos_not_found">Videos Not Found!</string>
    <string name="cancel">Cancel</string>
    <string name="reset_this_template">Reset this template?</string>
    <string name="reset_template_message">Are you sure you want to reset this template settings?\n This action cannot be undone.</string>
    <string name="delete_this_location">Delete this Location?</string>
    <string name="delete_location_message">Are you sure you want to delete this location?\n This action cannot be undone.</string>
    <string name="delete_this_image">Delete this Image?</string>
    <string name="delete_image_message">Are you sure you want to delete this image?\n This action cannot be undone.</string>
    <string name="delete_this_video">Delete this Video?</string>
    <string name="delete_video_message">Are you sure you want to delete this video? This action cannot be undone.</string>
    <string name="done">Done</string>
    <string name="font_styles">Font Styles</string>
    <string name="date_format">Date/Time Format</string>
    <string name="date_time">Date/Time</string>
    <string name="timer">Timer</string>
    <string name="ratio">Ratio</string>
    <string name="grid">Grid</string>
    <string name="watermarkonstamp">Watermark on stamp</string>
    <string name="videoresolution">Video Resolution</string>
    <string name="resolution">Resolution</string>
    <string name="framerate">Frame Rate</string>
    <string name="maximumimagequality">Maximum Image Quality</string>
    <string name="quality">Quality</string>
    <string name="sound">Sound</string>
    <string name="maximumimagequality_enable">Enable   : Processing photo, this may take longer</string>
    <string name="maximumimagequality_disable">Disable  : Fast capture, may impact visual quality</string>
    <string name="videovolume">Video Volume</string>
    <string name="viewonmap">View on Map</string>
    <string name="maptype">Map Type</string>
    <string name="map">Map</string>
    <string name="mylocation">My Location</string>
    <string name="template">Template</string>
    <string name="title">Title</string>
    <string name="my_home">My Home</string>
    <string name="address">Address</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="edittemplate">Edit Template</string>
    <string name="bg_color">Background Color</string>
    <string name="txt_color">Text Color</string>
    <string name="date_time_color">Date/Time Color</string>
    <string name="use_template">Use Template</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="go_premium">Go Premium</string>
    <string name="goPremium_desc">Access premium stamp styles, custom branding, and cloud sync</string>
    <string name="upgrade">Upgrade</string>
    <string name="date_format_desc">Customize the timestamp style for your images</string>
    <string name="font_desc">Personalize your stamp with stylish fonts</string>
    <string name="myloc_desc">Track and stamp your exact location</string>
    <string name="map_desc">See exact photo location on the map</string>
    <string name="camera_setting">Camera Setting</string>
    <string name="watermark">Watermark</string>
    <string name="premium_badge">Premium</string>
    <string name="premium_test_title">Premium access</string>
    <string name="premium_test_enabled">Current plan: Premium</string>
    <string name="premium_test_disabled">Current plan: Free</string>
    <string name="premium_test_toggle">Turn premium on or off</string>
    <string name="continue_with_free">Continue with free version</string>
    <string name="premium_active">Premium Active</string>
    <string name="close">Close</string>
    <string name="premium_includes">Premium includes</string>
    <string name="premium_benefits_list">✓ No ads\n✓ Premium fonts and date styles\n✓ Premium stamp templates\n✓ Custom locations\n✓ Remove watermark</string>
    <string name="other_setting">Other Setting</string>
    <string name="language_only">Language</string>
    <string name="lang_desc">Set your local language for better experience</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_desc">Help us enhance your user experience</string>
    <string name="rateUs">Rate Us</string>
    <string name="rateUs_desc">Your rating helps us improve the app</string>
    <string name="share_desc">Share the app with just one tap</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="help_support_desc">We\'re ready to help whenever you need</string>
    <string name="app_version_format" translatable="false">Version %1$s</string>
    <string name="submit">Submit</string>
    <string name="how_was_your_experience">How was your experience?</string>
    <string name="rate_us_sub_text">Your answer helps as to improve,\ntap a star to rate your experience</string>
    <string name="better">Better</string>
    <string name="oops">Oops</string>
    <string name="could_be_beter">Could Be Better</string>
    <string name="good">Good</string>
    <string name="awesome">Awesome</string>
    <string name="you_have_already_rated_this_application">You have already rated this application!</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="rate_experience">Rate your Experience</string>
    <string name="rate_terrible">Terrible</string>
    <string name="rate_bad">Bad</string>
    <string name="rate_better">Better</string>
    <string name="rate_good">Good</string>
    <string name="rate_loved">Loved It</string>
    <string name="feedback_type">Feedback Type</string>
    <string name="hint_feedback_type">Enter Feedback Type</string>
    <string name="your_comment">Your Comment</string>
    <string name="hint_feedback">Enter Feedback here...</string>
    <string name="camera_no_support_resolution">Camera doesn\'t support video resolution</string>
    <string name="camera_no_support_fps">Camera doesn\'t support FPS</string>
    <string name="fps">FPS</string>
    <string name="edit">Edit</string>
    <string name="use">Use</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
</resources>