<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_white_rounded"
    android:orientation="horizontal"
    android:padding="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maximumimagequality"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/maximumimagequality_enable"
            android:textColor="@color/grey_text"
            android:textSize="@dimen/_9ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/maximumimagequality_disable"
            android:textColor="@color/grey_text"
            android:textSize="@dimen/_9ssp" />
    </LinearLayout>

    <Switch
        android:id="@+id/switch_maximumimagequality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:thumbTint="@color/switch_thumb_color"
        android:trackTint="@color/switch_track_color"
        android:checked="true" />
</LinearLayout>
