<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_8sdp"
            android:foreground="?actionBarItemBackground"
            android:padding="@dimen/_6sdp"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_toEndOf="@+id/btBack"
            android:fontFamily="@font/sfprotextsemibold"
            android:text="@string/feedback"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/_3sdp"
        android:background="@color/grey_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_14sdp"
            android:paddingEnd="@dimen/_10sdp">


                <!-- Feedback Type -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sfprotextsemibold"
                    android:text="@string/feedback_type"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"/>

                <EditText
                    android:id="@+id/etFeedbackType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_feedback_type"
                    android:fontFamily="@font/sfprotextregular"
                    android:background="@drawable/tab_selector"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:textSize="@dimen/_13ssp"
                    android:layout_marginBottom="10dp"/>

                <!-- Comment -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sfprotextsemibold"
                    android:text="@string/your_comment"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_10sdp"/>

                <EditText
                    android:id="@+id/etComment"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:hint="@string/hint_feedback"
                    android:background="@drawable/tab_selector"
                    android:padding="15dp"
                    android:gravity="top"
                    android:textSize="@dimen/_13ssp"
                    android:layout_marginBottom="10dp"
                    android:inputType="textMultiLine"/>


                <!-- Submit Button -->
                <TextView
                    android:id="@+id/btnSendFeedBack"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="@dimen/_24sdp"
                    android:background="@drawable/background_blue"
                    android:fontFamily="@font/sfprotextsemibold"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    android:text="@string/send_feedback"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
