<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_white_rounded"
    android:layout_gravity="bottom">

    <!-- Header -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_6sdp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/sfprotextsemibold"
            android:text="@string/date_format"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <ImageView
            android:id="@+id/btnCloseDialog"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?actionBarItemBackground"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_close"
            android:contentDescription="Close" />

    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_280sdp"
        android:layout_weight="1"
        android:paddingHorizontal="@dimen/_8sdp"
        android:overScrollMode="ifContentScrolls"/>


    <!-- Action Buttons -->
    <LinearLayout
        android:id="@+id/llActionBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:paddingTop="@dimen/_8sdp"
        android:weightSum="2"
        android:layout_marginBottom="@dimen/_12sdp"
        android:gravity="center">

        <TextView
            android:id="@+id/btnSaveDateTime"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:layout_marginEnd="6dp"
            android:background="@drawable/background_blue"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/btnCancelDateTime"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:layout_marginStart="6dp"
            android:background="@drawable/background_black"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

</LinearLayout>